--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pod_player
 description: Vimeo and youtube player for flutter, Pod player provides customizable video player controls that support android, ios and web.
-version: 0.2.1
-homepage: https://github.com/newtaDev/pod_player
+version: 0.2.2
+homepage: https://github.com/IsuruRanasinghe1987/pod_player
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -11,12 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
   # services
-  video_player: ^2.7.0
+  video_player: ^2.8.2
   http: ^1.1.0
   get: ^4.6.5
   wakelock_plus: ^1.1.1
   universal_html: ^2.2.3
-  youtube_explode_dart: ^2.0.1
+  youtube_explode_dart: ^2.1.0
 
 dev_dependencies:
   flutter_test:
